# mmux-bash-mpfi

./: Makefile.am  NEWS  README  configure.ac
doc/: mmux-bash-mpfi.texi
meta/scripts/: mmux-bash-mpfi.pc.in  print-builtin-names.bash
src/: libmmux-bash-mpfi.bash.m4  mmux-bash-mpfi-assignment.c.m4  mmux-bash-mpfi-config.h.in  mmux-bash-mpfi-conversion.c.m4  mmux-bash-mpfi-endpoints.c.m4  mmux-bash-mpfi-init.c.m4  mmux-bash-mpfi-internals.h.m4  mmux-bash-mpfi-library.c.m4  mmux-bash-mpfi-miscellaneous.c.m4  mmux-bash-mpfi-type-functions.c.m4  mmux-bash-mpfi.h
src/m4/: macros-for-cc-mpfi.m4  mmux-bash-mpfi-config.m4.in
tests/: assignment.test.m4  conversion.test.m4  endpoints.test.m4  init.test.m4  miscellaneous.test.m4  packages.test.m4  printing.test.m4  version.test.m4
